--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sympo-2022",
+  "name": "symposium-2022",
   "version": "0.2.0",
   "homepage": "https://symposium.ch.tudelft.nl/2022",
   "private": true,
