--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.1",
+    "react-scripts": "2.0.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
@@ -38,5 +38,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
