--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "deploy": "npm run build && firebase deploy",
     "serve": "firebase serve",
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
